# AILA

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  cleaned_doc.txt  docker-compose.yml  pyproject.toml
.github/workflows/: ruff-lint.yml
backend/api/: app.py
backend/api/models/: etl.py
backend/api/routes/: etl.py
backend/api/services/: airflow_service.py
backend/api/utils/: airflow_client.py
backend/data/: test.md
backend/embeddings/: __init__.py  base.py  embeddings.py  factory.py
backend/etl/crawlers/: article.py  base.py  dispatcher.py  files.py  youtube.py
backend/etl/dags/: etl_dag.py  hello_world_dag.py
backend/etl/domain/: chunks.py  cleaned_documents.py  documents.py  embedded_chunks.py  exceptions.py  types.py
backend/etl/extract/: test.py
backend/etl/extractors/: article.py  base.py  dispatcher.py  files.py  github.py  youtube.py
backend/etl/networks/: embeddings.py
backend/etl/preprocessing/: chunking_data_handlers.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py
backend/etl/tasks/: chunk.py  chunk_and_embed.py  clean.py  clean_data_warehouse.py  clean_vector_database.py  extract.py  load.py  (+1 more)
backend/settings/: __init__.py  setting.py  settings.py
backend/utils/: logging.py  misc.py  singleton.py
frontend/: .env.sample  app.py
frontend/pages/: Data_Upload.py  Upload_Dashboard.py
frontend/services/: etl_service.py
frontend/settings/: settings.py
frontend/state/: source_fields.py
frontend/utils/: errors.py  text.py
frontend/views/: __init__.py  source_upload.py  upload_dashboard.py
monitoring/: grafana-datasources.yml  loki-config.yml  promtail-config.yml
(+7 files in other folders)
