[tool.poetry]
name = "laia"
version = "0.1.0"
description = ""
authors = ["miladbehrooz <milad.behrooz68@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python =">=3.11,<3.14"
loguru = "^0.7.3"
docling = "2.4"
mongoengine = "^0.29.1"
langchain = "^0.3.21"
langchain-community = "^0.3.20"
urllib3 = "^2.3.0"
youtube-transcript-api = "0.6.3"
pytube = "^15.0.0"
qdrant-client = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
