[tool.poetry]
name = "laia"
version = "0.1.0"
description = ""
authors = ["miladbehrooz <milad.behrooz68@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python =">=3.11,<3.14"
loguru = "^0.7.3"
docling = "2.4"
mongoengine = "^0.29.1"
langchain = "^0.3.21"
langchain-community = "^0.3.20"
urllib3 = "^2.3.0"
qdrant-client = "^1.13.3"
sentence-transformers = "^4.1.0"
openai = "^1.84.0"
tiktoken = "^0.9.0"
langchain-openai = "^0.3.21"
langchain-huggingface = "^0.2.0"
langchain-cohere = "^0.4.4"
yt-dlp = "^2025.6.25"
fastapi = "^0.116.1"
html2text = "^2025.4.15"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
